@@ -14,6 +14,7 @@ if test $jdkdir = no; then
   jdkdir=
   JAVASTUBS=
   JAVASWARMLIBS=
+  JAVASWARMSCRIPTS=
 else
   if test -f $jdkdir/include/jni.h; then
     JAVAINCLUDES="-I$jdkdir/include"
@@ -54,6 +55,7 @@ else
   AC_DEFINE(HAVE_JDK)
   JAVASTUBS=stubs
   JAVASWARMLIBS=-ljavaswarm
+  JAVASWARMSCRIPTS="javaswarm javacswarm"
 fi 
 
 AC_SUBST(JAVASTUBS)
@@ -61,6 +63,7 @@ AC_SUBST(JAVASWARMLIBS)
 AC_SUBST(JAVASTUBS_FUNCTION)
 AC_SUBST(JAVAINCLUDES)
 AC_SUBST(JAVALIBS)
+AC_SUBST(JAVASWARMSCRIPTS)
 AC_SUBST(JAVACLASSES)
 AC_SUBST(JAVACMD)
 AC_SUBST(JAVAENV)
