@@ -1,3 +1,9 @@
+1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* acxpm.m4 (md_STRUCT_XPM_ALLOCPIXELS): New macro.
+
+	* acjdk.m4 (JAVASWARMSCRIPTS): New substitution.	
+
 1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* acjdk.m4 (JAVASWARMLIBS): New substitution.
